Migrate TestDirectory to Paths
This will remove the last usages of File and the journey has come to an end.