@@ -20,7 +20,6 @@ import java.nio.file.FileSystems;
 import java.nio.file.FileVisitResult;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.SimpleFileVisitor;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.util.Collections;
@@ -99,7 +98,7 @@ public class Resources implements AutoCloseable
                 throw new UncheckedIOException( "Failed to copy file from resources: " + resourceFilename, e );
             }
         }
-        return getOrMakeCopy( Paths.get( resourceUri ), resourceFilename );
+        return getOrMakeCopy( Path.of( resourceUri ), resourceFilename );
     }
 
     private static URI resourceUriFor( String filename )
